--- a/view/styles/custom.css
+++ b/view/styles/custom.css
@@ -1,10 +1,11 @@
 body {
   background-color: black;
+  color: white;
 }
 nav {
   background-color: #22333b;
 }
 
 .container {
-  width: 40%;
+  width: 60%;
 }
